Event Registration Form page UI done

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -28,6 +28,11 @@
             </intent-filter>
         </activity>
         <activity android:name=".EventRegisterActivity" />
+        <activity android:name=".EventRegistrationForm"></activity>
+
+        <meta-data
+            android:name="preloaded_fonts"
+            android:resource="@array/preloaded_fonts" />
     </application>
 
 </manifest>
