--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,7 +12,7 @@
 
     <application
         android:allowBackup="true"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@drawable/logo"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
@@ -28,11 +28,13 @@
             </intent-filter>
         </activity>
         <activity android:name=".EventRegisterActivity" />
-        <activity android:name=".EventRegistrationForm"></activity>
+        <activity android:name=".EventRegistrationForm" />
 
         <meta-data
             android:name="preloaded_fonts"
             android:resource="@array/preloaded_fonts" />
+
+        <activity android:name=".LoginActivity"></activity>
     </application>
 
 </manifest>
