--- a/app/build.gradle
+++ b/app/build.gradle
@@ -38,6 +38,7 @@ dependencies {
     implementation 'com.firebaseui:firebase-ui-storage:4.1.0'
     implementation 'com.squareup.picasso:picasso:2.71828'
     implementation 'com.google.gms:google-services:3.0.0'
+    implementation 'com.firebaseui:firebase-ui-auth:4.1.0'
 
 }
 apply plugin: 'com.google.gms.google-services'
